--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,37 @@
 version: "3.8"
 services:
-  mediawiki:
-    image: mediawiki
-    restart: unless-stopped
-    ports:
-      - 8080:80
-    depends_on:
-      - db
-    volumes:
-      - ./LocalSettings.php:/var/www/html/LocalSettings.php
   db:
-    image: mariadb:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+    # We use a mariadb image which supports both amd64 & arm64 architecture
+    image: mariadb
+    # If you really want to use MySQL, uncomment the following line
+    #image: mysql:8.0.27
+    command: '--default-authentication-plugin=mysql_native_password'
     volumes:
+      - db_data:/var/lib/mysql
       - ./scripts/schema.sql:/docker-entrypoint-initdb.d/1.sql
       - ./scripts/data.sql:/docker-entrypoint-initdb.d/2.sql
       - ./backup:/backup
-    ports:
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=somewordpress
+      - MYSQL_DATABASE=wordpress
+      - MYSQL_USER=wordpress
+      - MYSQL_PASSWORD=wordpress
+    expose:
       - 3306
+      - 33060
+  wordpress:
+    image: wordpress:latest
+    ports:
+      - 80:80
+    restart: always
+    environment:
+      - WORDPRESS_DB_HOST=db
+      - WORDPRESS_DB_USER=wordpress
+      - WORDPRESS_DB_PASSWORD=wordpress
+      - WORDPRESS_DB_NAME=wordpress
+volumes:
+  db_data:
+
+  
+    
