--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
 version: "3.8"
 services:
   db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
     image: mariadb
-    # If you really want to use MySQL, uncomment the following line
-    #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
     volumes:
       - db_data:/var/lib/mysql
       - ./scripts/schema.sql:/docker-entrypoint-initdb.d/1.sql
       - ./scripts/data.sql:/docker-entrypoint-initdb.d/2.sql
       - ./backup:/backup
-    restart: always
+    restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=somewordpress
       - MYSQL_DATABASE=wordpress
@@ -24,14 +21,9 @@ services:
     image: wordpress:latest
     ports:
       - 80:80
-    restart: always
+    restart: unless-stopped
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
-volumes:
-  db_data:
-
-  
-    
